--- a/libs/musl/Makefile.in
+++ b/libs/musl/Makefile.in
@@ -5,6 +5,7 @@ EXTRADEFS = -D_ACRTIMP= -D_NO_CRT_MATH_INLINE -fno-builtin
 SOURCES = \
 	src/complex/__cexp.c \
 	src/complex/__cexpf.c \
+	src/complex/carg.c \
 	src/complex/cexp.c \
 	src/complex/cexpf.c \
 	src/math/__cos.c \
